// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`distinguish by props 1`] = `
[
  [
    0,
    383156298,
    "root",
  ],
  [
    0,
    493667567,
    "seq",
  ],
  [
    0,
    1049815855,
    "le",
  ],
  [
    0,
    1089078935,
    "seq",
  ],
  [
    0,
    1181055054,
    "const",
  ],
  [
    0,
    1440666767,
    "sample",
  ],
  [
    0,
    1557538697,
    "const",
  ],
  [
    0,
    1616670699,
    "phasor",
  ],
  [
    0,
    1741781271,
    "sample",
  ],
  [
    0,
    1840069255,
    "root",
  ],
  [
    2,
    383156298,
    1741781271,
  ],
  [
    2,
    493667567,
    1049815855,
  ],
  [
    2,
    1049815855,
    1616670699,
  ],
  [
    2,
    1049815855,
    1181055054,
  ],
  [
    2,
    1089078935,
    1049815855,
  ],
  [
    2,
    1440666767,
    1089078935,
  ],
  [
    2,
    1616670699,
    1557538697,
  ],
  [
    2,
    1741781271,
    493667567,
  ],
  [
    2,
    1840069255,
    1440666767,
  ],
  [
    3,
    383156298,
    "channel",
    1,
  ],
  [
    3,
    493667567,
    "seq",
    [
      0,
      1,
      0,
    ],
  ],
  [
    3,
    1089078935,
    "seq",
    [
      0,
      0,
      1,
    ],
  ],
  [
    3,
    1181055054,
    "value",
    0.5,
  ],
  [
    3,
    1440666767,
    "path",
    "test/path.wav",
  ],
  [
    3,
    1557538697,
    "value",
    2,
  ],
  [
    3,
    1741781271,
    "path",
    "test/path.wav",
  ],
  [
    3,
    1840069255,
    "channel",
    0,
  ],
  [
    4,
    [
      1840069255,
      383156298,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`distinguished subtrees by key 1`] = `
[
  [
    0,
    19209078,
    "root",
  ],
  [
    0,
    79046899,
    "phasor",
  ],
  [
    0,
    197128117,
    "phasor",
  ],
  [
    0,
    220712335,
    "mul",
  ],
  [
    0,
    364394878,
    "mul",
  ],
  [
    0,
    453550641,
    "mul",
  ],
  [
    0,
    453812052,
    "phasor",
  ],
  [
    0,
    555467758,
    "const",
  ],
  [
    0,
    787548653,
    "sin",
  ],
  [
    0,
    866439039,
    "sin",
  ],
  [
    0,
    1074324112,
    "sin",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1193164375,
    "const",
  ],
  [
    0,
    1376555748,
    "mul",
  ],
  [
    0,
    1427558172,
    "const",
  ],
  [
    0,
    1492179306,
    "phasor",
  ],
  [
    0,
    1512310154,
    "sin",
  ],
  [
    0,
    1661951969,
    "const",
  ],
  [
    0,
    1808164672,
    "add",
  ],
  [
    2,
    19209078,
    1808164672,
  ],
  [
    2,
    79046899,
    1661951969,
  ],
  [
    2,
    197128117,
    1193164375,
  ],
  [
    2,
    220712335,
    1097289128,
  ],
  [
    2,
    220712335,
    1492179306,
  ],
  [
    2,
    364394878,
    1097289128,
  ],
  [
    2,
    364394878,
    197128117,
  ],
  [
    2,
    453550641,
    1097289128,
  ],
  [
    2,
    453550641,
    453812052,
  ],
  [
    2,
    453812052,
    1427558172,
  ],
  [
    2,
    787548653,
    364394878,
  ],
  [
    2,
    866439039,
    1376555748,
  ],
  [
    2,
    1074324112,
    453550641,
  ],
  [
    2,
    1376555748,
    1097289128,
  ],
  [
    2,
    1376555748,
    79046899,
  ],
  [
    2,
    1492179306,
    555467758,
  ],
  [
    2,
    1512310154,
    220712335,
  ],
  [
    2,
    1808164672,
    1074324112,
  ],
  [
    2,
    1808164672,
    787548653,
  ],
  [
    2,
    1808164672,
    1512310154,
  ],
  [
    2,
    1808164672,
    866439039,
  ],
  [
    3,
    19209078,
    "channel",
    0,
  ],
  [
    3,
    555467758,
    "key",
    "fq3",
  ],
  [
    3,
    555467758,
    "value",
    440,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1193164375,
    "key",
    "fq2",
  ],
  [
    3,
    1193164375,
    "value",
    440,
  ],
  [
    3,
    1427558172,
    "key",
    "fq1",
  ],
  [
    3,
    1427558172,
    "value",
    440,
  ],
  [
    3,
    1661951969,
    "key",
    "fq4",
  ],
  [
    3,
    1661951969,
    "value",
    440,
  ],
  [
    4,
    [
      19209078,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`garbage collection 1`] = `
[
  [
    0,
    1305352856,
    "root",
  ],
  [
    0,
    1511449914,
    "cos",
  ],
  [
    2,
    1305352856,
    1511449914,
  ],
  [
    2,
    1511449914,
    1913760094,
  ],
  [
    3,
    1305352856,
    "channel",
    0,
  ],
  [
    4,
    [
      1305352856,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`garbage collection 2`] = `
[
  [
    1,
    520300429,
  ],
  [
    1,
    1423955117,
  ],
  [
    5,
  ],
]
`;

exports[`multi-channel basics 1`] = `
[
  [
    0,
    805437229,
    "root",
  ],
  [
    0,
    872803085,
    "sin",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1689717726,
    "mul",
  ],
  [
    0,
    1709345783,
    "const",
  ],
  [
    0,
    1850081212,
    "root",
  ],
  [
    0,
    1952747413,
    "phasor",
  ],
  [
    2,
    805437229,
    872803085,
  ],
  [
    2,
    872803085,
    1689717726,
  ],
  [
    2,
    1689717726,
    1097289128,
  ],
  [
    2,
    1689717726,
    1952747413,
  ],
  [
    2,
    1850081212,
    872803085,
  ],
  [
    2,
    1952747413,
    1709345783,
  ],
  [
    3,
    805437229,
    "channel",
    0,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1709345783,
    "key",
    "fq",
  ],
  [
    3,
    1709345783,
    "value",
    440,
  ],
  [
    3,
    1850081212,
    "channel",
    1,
  ],
  [
    4,
    [
      805437229,
      1850081212,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`numeric literals 1`] = `
[
  [
    0,
    198353271,
    "const",
  ],
  [
    0,
    520300429,
    "sin",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1406216981,
    "phasor",
  ],
  [
    0,
    1423955117,
    "root",
  ],
  [
    0,
    1913760094,
    "mul",
  ],
  [
    2,
    520300429,
    1913760094,
  ],
  [
    2,
    1406216981,
    198353271,
  ],
  [
    2,
    1423955117,
    520300429,
  ],
  [
    2,
    1913760094,
    1097289128,
  ],
  [
    2,
    1913760094,
    1406216981,
  ],
  [
    3,
    198353271,
    "value",
    440,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1423955117,
    "channel",
    0,
  ],
  [
    4,
    [
      1423955117,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`simple sharing 1`] = `
[
  [
    0,
    23247763,
    "tanh",
  ],
  [
    0,
    188983667,
    "root",
  ],
  [
    2,
    23247763,
    872803085,
  ],
  [
    2,
    188983667,
    23247763,
  ],
  [
    3,
    188983667,
    "channel",
    0,
  ],
  [
    4,
    [
      188983667,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`structural equality with value change 1`] = `
[
  [
    3,
    1427558172,
    "value",
    441,
  ],
  [
    5,
  ],
]
`;

exports[`switch and switch back 1`] = `
[
  [
    4,
    [
      70054491,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`the basics 1`] = `
[
  [
    0,
    805437229,
    "root",
  ],
  [
    0,
    872803085,
    "sin",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1689717726,
    "mul",
  ],
  [
    0,
    1709345783,
    "const",
  ],
  [
    0,
    1952747413,
    "phasor",
  ],
  [
    2,
    805437229,
    872803085,
  ],
  [
    2,
    872803085,
    1689717726,
  ],
  [
    2,
    1689717726,
    1097289128,
  ],
  [
    2,
    1689717726,
    1952747413,
  ],
  [
    2,
    1952747413,
    1709345783,
  ],
  [
    3,
    805437229,
    "channel",
    0,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1709345783,
    "key",
    "fq",
  ],
  [
    3,
    1709345783,
    "value",
    440,
  ],
  [
    4,
    [
      805437229,
    ],
  ],
  [
    5,
  ],
]
`;
